--- a/package.json
+++ b/package.json
@@ -36,33 +36,18 @@
     "@nestjs/cqrs": "^6.1.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.1.3",
-    "@nestjs/cqrs": "^6.1.0",
-    "@bitjson/npm-scripts-info": "^1.0.0",
     "@bitjson/typedoc": "^0.15.0-0",
     "@nestjs/cli": "^6.9.0",
+    "@nestjs/common": "^7.1.3",
+    "@nestjs/cqrs": "^6.1.0",
     "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.7.1",
-    "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.144",
     "@types/node": "^12.7.5",
-    "@types/supertest": "^2.0.8",
-    "codecov": "^3.5.0",
-    "cz-conventional-changelog": "^2.1.0",
-    "gh-pages": "^2.0.1",
-    "jest": "^24.9.0",
-    "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
     "prettier": "^1.18.2",
-    "remark-cli": "^7.0.0",
-    "remark-lint-emphasis-marker": "^1.0.3",
-    "remark-lint-strong-marker": "^1.0.3",
-    "remark-preset-lint-recommended": "^3.0.3",
     "standard-version": "^6.0.1",
-    "supertest": "^4.0.2",
     "trash-cli": "^3.0.0",
-    "ts-jest": "^24.1.0",
     "ts-loader": "^6.1.1",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
@@ -71,32 +56,10 @@
     "tslint-immutable": "^6.0.1",
     "typescript": "^3.5.3"
   },
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "diagnostics": false
-      }
-    },
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": ".",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
   "prettier": {
-    "singleQuote": true
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "all"
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
