--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@brunonunes/nestjs-cqrs-nats-jetstream",
+  "name": "nestjs-cqrs-nats-jetstream",
   "version": "1.0.0",
   "description": "NestJS CQRS module for NATS JetStream",
   "author": {
@@ -20,7 +20,6 @@
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:tslint": "tslint --fix --project .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
     "reset": "git clean -dfx && git reset --hard && npm i",
     "clean": "trash build test"
   },
@@ -31,18 +30,19 @@
     "nats": "^1.4.9"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.5",
-    "@nestjs/core": "^7.0.5",
-    "@nestjs/cqrs": "^6.1.0"
+    "@nestjs/common": "^7.1.3",
+    "@nestjs/core": "^7.1.3",
+    "@nestjs/cqrs": "^7.0.0"
   },
   "devDependencies": {
     "@bitjson/typedoc": "^0.15.0-0",
     "@nestjs/cli": "^6.9.0",
     "@nestjs/common": "^7.1.3",
-    "@nestjs/cqrs": "^6.1.0",
+    "@nestjs/core": "^7.1.3",
+    "@nestjs/cqrs": "^7.0.0",
     "@nestjs/schematics": "^6.7.0",
-    "@types/lodash": "^4.14.144",
     "@types/node": "^12.7.5",
+    "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
     "prettier": "^1.18.2",
